# AI-

./: .gitignore  员工手册2026.05.15.docx
agent-backend/: .env.example  handbook_text.txt  pyproject.toml
agent-backend/app/: config.py  main.py  models.py
agent-backend/app/api/: routes.py
agent-backend/app/core/: audio_utils.py  avatar_service.py  document_processor.py  pipeline.py  rag_service.py  render_service.py  scene_planner.py  scene_templates.py  script_agent.py  tts_service.py
agent-backend/app/design_system/: master.py
agent-backend/app/prompts/: templates.py
agent-backend/scripts/: generate_avatar.py  generate_tts_audio.py  generate_video_script.py  scene_timings.json  video_script.json
docs/superpowers/plans/: 2026-05-21-voice-selection.md
docs/superpowers/specs/: 2026-05-21-voice-selection-design.md
employee-orientation-video/: index.html  meta.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
my-video/: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  render.cmd
my-video/agent/: skill.yaml
my-video/agent/prompts/: analyze-requirement.md  apply-style-tokens.md  avatar-dialogue.md  design-storyboard.md  generate-script.md
my-video/agent/workflows/: generate-video.md
my-video/compositions/: scene1.html  scene2.html  scene3.html  scene4.html  scene5.html  scene6.html  scene7.html
my-video/design-system/: MASTER.md
my-video/docs/: meta.json  script.txt
my-video/templates/corporate/: manifest.json
(+8 files in other folders)
