[project]
name = "video-agent"
version = "0.1.0"
description = "AI agent for document-to-video generation with HyperFrames"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-docx>=1.1.2",
    "PyMuPDF>=1.25.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.57.0",
    "aiofiles>=24.1.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
]

[project.scripts]
video-agent = "app.main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
